--- a/kled/charge!.css
+++ b/kled/charge!.css
@@ -56,8 +56,8 @@ text-align: center;
     height: 100%;
     object-fit: cover;
   }
-  .ja li, ja li img {
-    transition: 0.3;
+  .ja li, .ja li img {
+    transition: 0.9s;
   }
   .ja li .ja {
     transition: 1.5s ease;
@@ -123,8 +123,6 @@ text-align: center;
 
   table, th, td {
     border: 3px solid #000000;
-    color: #eee;
-    background-color: #3d6eb8;
   }
 
   th, td {
@@ -136,3 +134,19 @@ text-align: center;
     background-color: #f2f2f2;
     color: #333;
   }
+table tr:nth-child(even) {
+    background-color: #58abf0;
+    color: #eee;
+}
+table tr:nth-child(odd) {
+    background-color:#3d6eb8 ;
+    color: #f2f2f2;
+}
+table tr:nth-child(odd):hover {
+    background-color: #b5b815 ;
+    color: #eee;
+}
+table tr:nth-child(even):hover {
+    background-color:#d1423d ;
+    color:#f2f2f2;
+}
